--- a/seller-dashboard/package.json
+++ b/seller-dashboard/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -26,7 +26,8 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "vercel": "^44.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
